--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3995,7 +3995,7 @@
                                 </div>
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-1">Peso Volumétrico (kg)</label>
-                                    <input type="number" name="peso_volumetrico" min="0.01" step="0.01" placeholder="0.00" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-purple-500">
+                                    <input type="text" name="peso_volumetrico" placeholder="123.456.789.012.345,00" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-purple-500 campo-numerico" data-tipo="peso">
                                 </div>
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-1">Mercadoria Perigosa</label>
