--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3659,7 +3659,7 @@
                             </h4>
                             
                             <!-- Opção de tipo de origem (apenas para rodoviário) -->
-                            <div id="tipo-origem-rodoviario" class="mb-4" style="display:none;">
+                            <div id="tipo-origem-rodoviario" class="mb-4">
                                 <label class="block text-sm font-medium text-gray-700 mb-2">Tipo de Origem</label>
                                 <div class="flex gap-4">
                                     <label class="flex items-center">
