--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7307,5 +7307,8 @@
     <!-- Melhorias do modal de cotação -->
     <script src="js/modal-cotacao-melhorado.js"></script>
     
+    <!-- Modal de detalhes da cotação -->
+    <script src="js/cotacao-detalhes.js"></script>
+    
 </body>
 </html>
