--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12025,5 +12025,8 @@
     <!-- Sistema principal de inicialização -->
     <script src="js/main.js"></script>
     
+    <!-- Correções do sistema -->
+    <script src="js/fix-sistema.js"></script>
+    
 </body>
 </html>
