--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12025,8 +12025,9 @@
     <!-- Sistema principal de inicialização -->
     <script src="js/main.js"></script>
     
-    <!-- Correções do sistema -->
+    <!-- Sistema de correções -->
     <script src="js/fix-sistema.js"></script>
+    <script src="js/fix-final.js"></script>
     
 </body>
 </html>
