--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12026,8 +12026,11 @@
     <script src="js/main.js"></script>
     
     <!-- Sistema de correções -->
+    <script src="js/error-handler.js"></script>
+    <script src="js/api-fallback.js"></script>
     <script src="js/fix-sistema.js"></script>
     <script src="js/fix-final.js"></script>
+    <script src="js/system-status.js"></script>
     
 </body>
 </html>
