--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12033,6 +12033,8 @@
     <script src="js/ui.js"></script>
     <script src="js/dashboard.js"></script>
     <script src="js/cotacoes.js"></script>
+    <script src="js/empresas.js"></script>
+    <script src="js/analytics.js"></script>
     
     <!-- Sistema aceitar/negar -->
     <script src="js/aceitar-negar-cotacoes.js"></script>
